Increase sync speed

--- a/clusters/gorilla/cne02/infrastructure-sync.yaml
+++ b/clusters/gorilla/cne02/infrastructure-sync.yaml
@@ -5,7 +5,7 @@ metadata:
   name: infrastructure
   namespace: flux-system
 spec:
-  interval: 5m0s
+  interval: 30s
   path: ./infrastructure/gorilla/cne02
   prune: true
   sourceRef:
