--- a/clusters/gorilla/cne02/infrastructure-sync.yaml
+++ b/clusters/gorilla/cne02/infrastructure-sync.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30s
-  path: ./infrastructure/gorilla/cne02
+  path: ./clusters/gorilla/cne02
   prune: true
   sourceRef:
     kind: GitRepository
